tests/dependancies/bad/private_module/module/mod.rs
mod module2;

pub fn exec() {
    print!("here")
}